hide second level menus and fix active state display issue.  The links were jumping around when clicked

--- a/resources/gato-template-tsus2017/css/tsus-menu.scss
+++ b/resources/gato-template-tsus2017/css/tsus-menu.scss
@@ -32,9 +32,6 @@
                 content: '';
                 display: block;
                 margin: auto;
-                height: 2px;
-                width: 0;
-                margin-top: 0.5rem;
                 background: transparent;
                 -webkit-transition: all .3s;
                 -ms-transition: all .3s;
@@ -60,29 +57,30 @@
             }
         }
         .ddmenu-menu{
-            text-align: center;
-            position: initial;
-            padding: 0.8rem 0 0;
-            li{
-                text-transform: none;
-                font-weight: 400;
-                line-height: 22px;
-                margin: 0;
-                @media (max-width: $sm-breakpoint){
-                    line-height: 20px;
-                }
-                a{
-                    color: $white;
-                    text-decoration: none;
-                    padding: 0 1.2rem 0.5rem;
-                    @media (max-width: $sm-breakpoint){
-                        padding: 0;
-                    }
-                }
-            }
-            @media (max-width: $sm-breakpoint){
-              padding: 0.3rem 0 1.2rem;
-            }
+            display: none !important;
+            // text-align: center;
+            // position: initial;
+            // padding: 0.8rem 0 0;
+            // li{
+            //     text-transform: none;
+            //     font-weight: 400;
+            //     line-height: 22px;
+            //     margin: 0;
+            //     @media (max-width: $sm-breakpoint){
+            //         line-height: 20px;
+            //     }
+            //     a{
+            //         color: $white;
+            //         text-decoration: none;
+            //         padding: 0 1.2rem 0.5rem;
+            //         @media (max-width: $sm-breakpoint){
+            //             padding: 0;
+            //         }
+            //     }
+            // }
+            // @media (max-width: $sm-breakpoint){
+            //   padding: 0.3rem 0 1.2rem;
+            // }
         }
     }
 }
